# SD-C

./: Ask_Processes.cpp  CMakeLists.txt  CS_Examples.cpp  Calc_Source.cpp  Game_Source.cpp  Metric_Source.cpp  Test_New_Main.h  Test_New_Main_Def.cpp  Vid_converter.cpp  a.out  calc.cpp  calcSource.cpp  main.cpp  main.h  metric.cpp  metricSource.cpp
